--- a/Loop.ipynb
+++ b/Loop.ipynb
@@ -530,8 +530,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "d03f8629-0623-4b9f-93bd-82db5b35abd6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter a number to find table till 10 13\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13 X 1 = 13\n",
+      "13 X 2 = 26\n",
+      "13 X 3 = 39\n",
+      "13 X 4 = 52\n",
+      "13 X 5 = 65\n",
+      "13 X 6 = 78\n",
+      "13 X 7 = 91\n",
+      "13 X 8 = 104\n",
+      "13 X 9 = 117\n",
+      "13 X 10 = 130\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print Tables of any number -- n x 10  =\n",
+    "\n",
+    "n = int(input(\"Enter a number to find table till 10\"))\n",
+    "for i in range(1,11):\n",
+    "    print(f\"{n} X {i} = {n * i}\")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ffccb815-de6c-46e4-8908-5a951c1238a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Reverse loop \n",
+    "#forward iteration \n",
+    "for n in range(10,0,-1):\n",
+    "    print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "8d311aed-e2b6-4067-a3e6-f842bd75c06d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "980\n",
+      "945\n",
+      "910\n",
+      "875\n",
+      "840\n",
+      "805\n",
+      "770\n",
+      "735\n",
+      "700\n",
+      "665\n",
+      "630\n",
+      "595\n",
+      "560\n",
+      "525\n",
+      "490\n",
+      "455\n",
+      "420\n",
+      "385\n",
+      "350\n",
+      "315\n",
+      "280\n",
+      "245\n",
+      "210\n"
+     ]
+    }
+   ],
+   "source": [
+    "# In reverse from 1000 to 200 i want all the number that are div 7 and 5\n",
+    "for n in range (1000,199,-1):\n",
+    "    if not n % 7 and not n % 5:\n",
+    "        print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "a7119b6a-dd47-474d-bb70-de8fd6092920",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "---------------------\n",
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#while Loop \n",
+    "i = 1\n",
+    "while i <= 10:\n",
+    "    print(i)\n",
+    "    i += 1\n",
+    "print(\"---------------------\")\n",
+    "#reverse in While loop \n",
+    "j = 10\n",
+    "while j >= 1:\n",
+    "    print(j)\n",
+    "    j -= 1\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "a2c76da9-ae20-4e6a-a362-e1193c8604c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 X 1 = 10\n",
+      "10 X 2 = 20\n",
+      "10 X 3 = 30\n",
+      "10 X 4 = 40\n",
+      "10 X 5 = 50\n",
+      "10 X 6 = 60\n",
+      "10 X 7 = 70\n",
+      "10 X 8 = 80\n",
+      "10 X 9 = 90\n",
+      "10 X 10 = 100\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 1\n",
+    "num = 10 \n",
+    "while n <= 10:\n",
+    "    print(f\"{num} X {n} = {\n",
+    "    n * num}\")\n",
+    "    n += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddf99d73-d79d-4b0c-9083-293f89a3dc40",
    "metadata": {},
    "outputs": [],
    "source": []
