--- a/LeetCode1.ipynb
+++ b/LeetCode1.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "id": "8a2b0c84-c0d8-468a-9d7d-45dff34dc257",
    "metadata": {},
    "outputs": [
@@ -121,23 +121,129 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 3, 2]\n"
+      "[1, 3, 2]\n",
+      "None\n"
      ]
     }
    ],
    "source": [
+    "from typing import List\n",
     "class Solution:\n",
     "    def findMedianSortedArrays(self, nums1: List[int], nums2: List[int]) -> float:\n",
     "        median = []\n",
     "        shortedArray = []\n",
     "        num3 = nums1 + nums2\n",
-    "        \n",
     "        print(num3)\n",
     "\n",
     "obj = Solution()\n",
     "result = obj.findMedianSortedArrays([1,3],[2])\n",
+    "print(result)\n",
     "\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "314bfc22-fd86-4eda-9553-2811fd3a36e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "[5, 6, 7]\n",
+      "3\n",
+      "4\n",
+      "[6]\n",
+      "2\n",
+      "3\n",
+      "[5]\n",
+      "1\n",
+      "2\n",
+      "[4]\n",
+      "0\n",
+      "1\n",
+      "[3]\n",
+      "[5, 6, 7, 1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#189. Rotate Array\n",
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def rotate(self, nums: List[int], k: int) -> None:\n",
+    "      \n",
+    "        n = len(nums)\n",
+    "        k = k%n\n",
+    "        print(k)\n",
+    "        temp = nums[n-k:]\n",
+    "        print(temp)        \n",
+    "        for i in range(n-k-1,-1,-1):\n",
+    "            nums[i+k]  = nums[i]\n",
+    "        for i in range(k):\n",
+    "            nums[i] =temp[i]\n",
+    "\n",
+    "        return nums\n",
+    "        \n",
+    "        \n",
+    "\n",
+    "obj = Solution()\n",
+    "result = obj.rotate([1,2,3,4,5,6,7],3)\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "76ae647d-2372-498f-a3d1-f6ae55a9f0cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 [1, 2, 3, 4, 5, 6, 7]\n",
+      "[7, 6, 5, 4, 3, 2, 1]\n",
+      "[5, 6, 7]\n",
+      "[1, 2, 3, 4]\n",
+      "[5, 6, 7, 1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#189. Rotate Array\n",
+    "\n",
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def rotate(self, nums: List[int], k: int) -> None:\n",
+    "        n = len(nums)\n",
+    "        k = k % n\n",
+    "        print(k, nums)\n",
+    "        nums.reverse()\n",
+    "        print(nums)\n",
+    "        nums[:k] = reversed(nums[:k])\n",
+    "        print(nums[:k])\n",
+    "        nums[k:] = reversed(nums[k:])\n",
+    "        print(nums[k:])\n",
+    "        return nums\n",
+    "        \n",
+    "obj = Solution()\n",
+    "result = obj.rotate([1,2,3,4,5,6,7],3)\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d80465c-aefd-48c9-ac80-d667f40a7edb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#121. Best Time to Buy and Sell Stock\n",
+    "\n"
    ]
   }
  ],
@@ -157,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
