adding one more in of leetcode

--- a/LeetCode1.ipynb
+++ b/LeetCode1.ipynb
@@ -222,7 +222,7 @@
     "        n = len(nums)\n",
     "        k = k % n\n",
     "        print(k, nums)\n",
-    "        nums.reverse()\n",
+    "        nums.reverse() \n",
     "        print(nums)\n",
     "        nums[:k] = reversed(nums[:k])\n",
     "        print(nums[:k])\n",
@@ -237,13 +237,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2d80465c-aefd-48c9-ac80-d667f40a7edb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "#121. Best Time to Buy and Sell Stock\n",
-    "\n"
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def maxProfit(self, prices: List[int]) -> int:\n",
+    "        maxprofit = 0\n",
+    "        minprice = 999999\n",
+    "        for i in range(len(prices)):\n",
+    "            #buying\n",
+    "            minprice = min(minprice,prices[i])\n",
+    "            #selling\n",
+    "            maxprofit = max(maxprofit,prices[i] - minprice)\n",
+    "        return maxprofit\n",
+    "        \n",
+    "obj = Solution()\n",
+    "result = obj.maxProfit([7,1,5,3,6,4])\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f42802b1-a944-4a42-8a1c-133bd58e7344",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#121. Best Time to Buy and Sell Stock\n",
+    "from typing import List\n",
+    "class Solution:\n",
+    "     def maxProfit(self, prices: List[int]) -> int:\n",
+    "         n = len(prices)\n",
+    "         mx = 0\n",
+    "         ans = 0\n",
+    "         for i in range(n -1,-1 ,-1):\n",
+    "             mx = max(prices[i],mx)\n",
+    "             ans = max(ans,mx - prices[i])\n",
+    "         return ans\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "obj = Solution()\n",
+    "result = obj.maxProfit([7,1,5,3,6,4])\n",
+    "print(result)"
    ]
   }
  ],
