--- a/LeetCode1.ipynb
+++ b/LeetCode1.ipynb
@@ -2,24 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "30917d63-51fe-4341-97d5-ecb3dd16c845",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "data {7: 0} 0\n",
-      "-6\n",
-      "data {7: 0, 15: 1} 1\n",
-      "7\n",
-      "for understand 0 2\n",
-      "result:-  [0, 2]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Given an array of integers nums and an integer target, return indices of the two numbers such that they add up to target.\n",
     "# You may assume that each input would have exactly one solution, and you may not use the same element twice.\n",
@@ -65,27 +51,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "3b1e6e77-ea83-47ca-9035-d2b0b87169aa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'p'}\n",
-      "{'p', 'w'}\n",
-      "0\n",
-      "1\n",
-      "{'w'}\n",
-      "{'w', 'k'}\n",
-      "{'w', 'k', 'e'}\n",
-      "2\n",
-      "{'w', 'k', 'e'}\n",
-      "total: 3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#3. Longest Substring Without Repeating Characters\n",
     "class Solution:\n",
@@ -113,19 +82,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8a2b0c84-c0d8-468a-9d7d-45dff34dc257",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 3, 2]\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from typing import List\n",
     "class Solution:\n",
@@ -144,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "314bfc22-fd86-4eda-9553-2811fd3a36e0",
    "metadata": {},
    "outputs": [
@@ -154,18 +114,6 @@
      "text": [
       "3\n",
       "[5, 6, 7]\n",
-      "3\n",
-      "4\n",
-      "[6]\n",
-      "2\n",
-      "3\n",
-      "[5]\n",
-      "1\n",
-      "2\n",
-      "[4]\n",
-      "0\n",
-      "1\n",
-      "[3]\n",
       "[5, 6, 7, 1, 2, 3, 4]\n"
      ]
     }
@@ -197,22 +145,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "76ae647d-2372-498f-a3d1-f6ae55a9f0cc",
+   "execution_count": null,
+   "id": "837fb681",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 [1, 2, 3, 4, 5, 6, 7]\n",
-      "[7, 6, 5, 4, 3, 2, 1]\n",
-      "[5, 6, 7]\n",
-      "[1, 2, 3, 4]\n",
-      "[5, 6, 7, 1, 2, 3, 4]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#189. Rotate Array\n",
     "\n",
@@ -237,7 +173,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "76ae647d-2372-498f-a3d1-f6ae55a9f0cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 [1, 2, 3, 4, 5, 6, 7]\n",
+      "[6, 7, 1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#189. Rotate Array\n",
+    "\n",
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def rotate(self, nums: List[int], k: int) -> None:\n",
+    "        n = len(nums)\n",
+    "        k = k % n\n",
+    "        roteted =[0]*n\n",
+    "        print(k, nums)\n",
+    "        for i in range(n):\n",
+    "            shift= (i + k)%n\n",
+    "            roteted[shift] = nums[i]\n",
+    "            \n",
+    "        for i in range(n):\n",
+    "            nums[i] = roteted[i]\n",
+    "        print(nums)\n",
+    "      \n",
+    "obj = Solution()\n",
+    "result = obj.rotate([1,2,3,4,5,6,7],2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "2d80465c-aefd-48c9-ac80-d667f40a7edb",
    "metadata": {},
    "outputs": [
@@ -270,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "f42802b1-a944-4a42-8a1c-133bd58e7344",
    "metadata": {},
    "outputs": [
@@ -294,11 +267,6 @@
     "             mx = max(prices[i],mx)\n",
     "             ans = max(ans,mx - prices[i])\n",
     "         return ans\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "obj = Solution()\n",
     "result = obj.maxProfit([7,1,5,3,6,4])\n",
     "print(result)"
@@ -307,7 +275,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -321,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
