added one more question

--- a/LeetCode1.ipynb
+++ b/LeetCode1.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "f42802b1-a944-4a42-8a1c-133bd58e7344",
    "metadata": {},
    "outputs": [
@@ -271,11 +271,53 @@
     "result = obj.maxProfit([7,1,5,3,6,4])\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "a0d02483-7df1-4f5a-bddb-8244317b90f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 1, 2, 4]\n",
+      "[2, 4, 3, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#905.Short Array By Parity\n",
+    "class Solution:\n",
+    "    def sortArrayParity(self, nums: List[int]):\n",
+    "        print(nums)\n",
+    "        even = []\n",
+    "        odd = []\n",
+    "        for i  in range(len(nums)):\n",
+    "            if nums[i] % 2 == 0:\n",
+    "                even.append(nums[i])\n",
+    "            else:\n",
+    "                odd.append(nums[i])\n",
+    "        print(even + odd)\n",
+    "\n",
+    "obj = Solution()\n",
+    "\n",
+    "obj.sortArrayParity([3,1,2,4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f06552a6-a815-425e-a3a4-2f943ab27363",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
