--- a/LeetCode1.ipynb
+++ b/LeetCode1.ipynb
@@ -308,11 +308,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "id": "f06552a6-a815-425e-a3a4-2f943ab27363",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-3, 4, 3, 2]\n",
+      "[-3, 2, 4, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2161 Partition Array According to Given Pivot\n",
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def pivotArray(self,  nums:List[int],pivot: int):\n",
+    "        print(nums)\n",
+    "        big = []\n",
+    "        little = []\n",
+    "        equal = []\n",
+    "        for num in nums:\n",
+    "            if num > pivot :\n",
+    "                big.append(num)\n",
+    "            elif num < pivot:\n",
+    "                little.append(num)\n",
+    "            if num == pivot:\n",
+    "                 equal.append( num)\n",
+    "        print(little+equal +big)\n",
+    "                \n",
+    "obj = Solution()\n",
+    "obj.pivotArray([-3,4,3,2],2)"
+   ]
   }
  ],
  "metadata": {
