added new question

--- a/LeetCode1.ipynb
+++ b/LeetCode1.ipynb
@@ -43,9 +43,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#2. Add Two Numbers\n",
-    "class Solution:\n",
-    "    def addTwoNumber(self,l1 :[listNode], l2:[ListNode]):\n",
+    "# #2. Add Two Numbers\n",
+    "# class Solution:\n",
+    "#     def addTwoNumber(self,l1 :[listNode], l2:[ListNode]):\n",
     "        \n"
    ]
   },
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "id": "f06552a6-a815-425e-a3a4-2f943ab27363",
    "metadata": {},
    "outputs": [
@@ -341,6 +341,338 @@
     "                \n",
     "obj = Solution()\n",
     "obj.pivotArray([-3,4,3,2],2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "4dc5a55f-80cd-43fd-b25e-b39f4d10a7b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 1, 1, 2, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#75. Short Color\n",
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def sortColors(self, nums: List[int]) -> None:\n",
+    "       l = 0\n",
+    "       m = 0\n",
+    "       r = len(nums) -1\n",
+    "       while m <= r:\n",
+    "           if nums[m] == 0:\n",
+    "               nums[m],nums[l] = nums[l],nums[m]\n",
+    "               l+=1\n",
+    "               m+= 1\n",
+    "           elif nums[m] == 1:\n",
+    "               m += 1\n",
+    "           elif nums[m] == 2:\n",
+    "               nums[m],nums[r] = nums[r],nums[m]\n",
+    "               r -= 1\n",
+    "       print(nums)\n",
+    "       \n",
+    "obj = Solution()\n",
+    "obj.sortColors([2,0,2,1,1,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "ddb3562e-506c-495e-b319-53769135d34b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#383.Ransom Note\n",
+    "class Solution:\n",
+    "    def canConstruct(self, ransomNote: str, magazine: str) -> bool:\n",
+    "        freq = [0] * 26\n",
+    "        for ch in magazine:\n",
+    "            freq[ord(ch)- ord(\"a\")] += 1\n",
+    "        for ch in ransomNote:\n",
+    "            index = ord(ch) - ord(\"a\")\n",
+    "            if freq[index] == 0:\n",
+    "                return False\n",
+    "            freq[index] -= 1\n",
+    "        return True\n",
+    "obj = Solution()\n",
+    "result = obj.canConstruct(\"bb\",\"bba\")\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "bfe96ad3-7e7f-4188-bde5-282a4dbe9d35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "#383. Ransom Note \n",
+    "class Solution:\n",
+    "    def canConstruct(self, ransomNote: str, magazine: str) -> bool:\n",
+    "        mz = dict()\n",
+    "        for ch in magazine:\n",
+    "            if ch in mz:\n",
+    "                mz[ch] += 1\n",
+    "            else:\n",
+    "                mz[ch] = 1\n",
+    "        \n",
+    "        for ch in ransomNote:\n",
+    "            if ch not in mz or mz[ch] == 0:\n",
+    "                return False\n",
+    "            mz[ch] -= 1    \n",
+    "        return True    \n",
+    "\n",
+    "obj = Solution()\n",
+    "result = obj.canConstruct(\"aa\",\"ab\")\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "2e6b3c28-1002-4865-b865-30072696b844",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['eat', 'tea', 'ate'], ['tan', 'nat'], ['bat']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 49 Group Anagrams\n",
+    "from collections import defaultdict\n",
+    "class Solution:\n",
+    "    def groupAnagrams(self,strs:list[str]):\n",
+    "        mp = defaultdict(list)\n",
+    "        for word in strs:\n",
+    "            key = \"\".join(sorted(word))\n",
+    "            mp[key].append(word)\n",
+    "        return list(mp.values())\n",
+    "            \n",
+    "obj = Solution()\n",
+    "result = obj.groupAnagrams([\"eat\",\"tea\",\"tan\",\"ate\",\"nat\",\"bat\"])\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5f8aaec8-7635-4f2e-9750-13b54c0c51a9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['eat', 'tea', 'ate'], ['tan', 'nat'], ['bat']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 49 Group Anagrams\n",
+    "from collections import defaultdict\n",
+    "class Solution:\n",
+    "    def groupAnagrams(self,strs:list[str]):\n",
+    "        mp = defaultdict(list)\n",
+    "        for s in strs:\n",
+    "            count = [0] * 26\n",
+    "            for c in s:\n",
+    "                count[ord(c) - ord('a')] += 1\n",
+    "            mp[tuple(count)].append(s)\n",
+    "        return list(mp.values())\n",
+    "            \n",
+    "obj = Solution()\n",
+    "result = obj.groupAnagrams([\"eat\",\"tea\",\"tan\",\"ate\",\"nat\",\"bat\"])\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "090d9f0b-2d78-4e69-a1af-7d9d73158891",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 2, 3, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#88 merge shorted array\n",
+    "class Solution:\n",
+    "    def merge(self,nums1:list[int],m:int,nums2:list[int],n):\n",
+    "        i = m - 1       # pointer for nums1\n",
+    "        j = n - 1       # pointer for nums2\n",
+    "        k = m + n - 1   # pointer for merged array\n",
+    "\n",
+    "        while i >= 0 and j >= 0:\n",
+    "            if nums1[i] > nums2[j]:\n",
+    "                nums1[k] = nums1[i]\n",
+    "                i -= 1\n",
+    "            else:\n",
+    "                nums1[k] = nums2[j]\n",
+    "                j -= 1\n",
+    "            k -= 1\n",
+    "        # # If nums2 still has elements left\n",
+    "        # while j >= 0:\n",
+    "        #     nums1[k] = nums2[j]\n",
+    "        #     j -= 1\n",
+    "        return nums1\n",
+    "            \n",
+    "obj = Solution()\n",
+    "result = obj.merge([1,2,3,7,0,0],3,[2,5,6],3)\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "92983441-7ed6-4d0e-af5a-00e441dbc904",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#26 Remove Duplicates from Sorted Array\n",
+    "class Solution:\n",
+    "    def removeDuplicates(self,nums:list[int]):\n",
+    "        k = 0\n",
+    "        for i in range(1,len(nums)):\n",
+    "            if nums[k] != nums[i]:\n",
+    "                nums[k+1] = nums[i]\n",
+    "                k+=1\n",
+    "        return k +1\n",
+    "            \n",
+    "obj = Solution()\n",
+    "result = obj.removeDuplicates([1,1,2])\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "73a14f69-908d-467b-b379-edf52b85b082",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#169 Majority Element\n",
+    "class Solution:\n",
+    "    def majorityElement(self,nums:list[int]):\n",
+    "        cnt = 0\n",
+    "        for i in range(len(nums)):\n",
+    "            if cnt == 0:\n",
+    "                res = nums[i]\n",
+    "            if nums[i] == res:\n",
+    "                cnt += 1\n",
+    "            else:\n",
+    "                cnt -= 1\n",
+    "        return res\n",
+    "obj = Solution()\n",
+    "result = obj.majorityElement([2,3,3,2])\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "712eaf1f-89f3-4777-ad23-b4b8f937b396",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#122 Best Time to Buy and Sell Stock II \n",
+    "class Solution:\n",
+    "    def maxProfit(self, prices: List[int]) -> int:\n",
+    "        profit = 0\n",
+    "        for i in range(1,len(prices)):\n",
+    "            if \n",
+    "obj = Solution()\n",
+    "result = obj.maxProfit([7,1,5,3,6,4])\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "71ad991d-7e0e-4189-88ca-682f1e174a01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "49\n"
+     ]
+    }
+   ],
+   "source": [
+    "#11. Container With Most Water\n",
+    "# Formula Water = min(left_height, right_height) × distance_between_lines\n",
+    "class Solution:\n",
+    "    def maxArea(self,height:list[int]):\n",
+    "        left = 0\n",
+    "        right = len(height) - 1\n",
+    "        max_water = 0\n",
+    "        while left < right:\n",
+    "            width = right - left\n",
+    "            h = min(height[left] , height[right])\n",
+    "            area = width * h\n",
+    "            max_water = max(max_water, area)\n",
+    "            if height[left] < height[right]:\n",
+    "                left += 1\n",
+    "            else:\n",
+    "                right -= 1\n",
+    "        return max_water\n",
+    "        \n",
+    "            \n",
+    "obj = Solution()\n",
+    "result = obj.maxArea([1,8,6,2,5,4,8,3,7])\n",
+    "print(result)\n"
    ]
   }
  ],
