Updated LeetCode solutions

--- a/LeetCode1.ipynb
+++ b/LeetCode1.ipynb
@@ -620,17 +620,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "712eaf1f-89f3-4777-ad23-b4b8f937b396",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "#122 Best Time to Buy and Sell Stock II \n",
     "class Solution:\n",
     "    def maxProfit(self, prices: List[int]) -> int:\n",
     "        profit = 0\n",
     "        for i in range(1,len(prices)):\n",
-    "            if \n",
+    "            if prices[i] > prices[i -1]:\n",
+    "                profit += prices[i] - prices[i -1]\n",
+    "        return profit\n",
     "obj = Solution()\n",
     "result = obj.maxProfit([7,1,5,3,6,4])\n",
     "print(result)\n"
