--- a/LeetCode1.ipynb
+++ b/LeetCode1.ipynb
@@ -684,6 +684,40 @@
     "result = obj.maxArea([1,8,6,2,5,4,8,3,7])\n",
     "print(result)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b510a919-e00d-49c7-95fe-00006de19270",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "{1, 2, 3, 4}\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 414.Third Maximum Number\n",
+    "class Solution:\n",
+    "    def thirdMax(self, nums:list[int]):\n",
+    "        print(\"Hello\")\n",
+    "        distict_num = set(nums)\n",
+    "        print(distict_num)\n",
+    "        if len(distict_num) < 3:\n",
+    "            return max(distict_num)\n",
+    "        distict_num.remove(max(distict_num))\n",
+    "        distict_num.remove(max(distict_num))\n",
+    "        return max(distict_num)\n",
+    "            \n",
+    "obj = Solution()\n",
+    "result = obj.thirdMax([2,2,3,1,4])\n",
+    "print(result)\n"
+   ]
   }
  ],
  "metadata": {
@@ -702,7 +736,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
