--- a/LeetCode1.ipynb
+++ b/LeetCode1.ipynb
@@ -718,6 +718,127 @@
     "result = obj.thirdMax([2,2,3,1,4])\n",
     "print(result)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2aa6949a-3649-47e7-856a-f23a41dd6ca8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reversed the number\n",
+    "def reverse(arr):\n",
+    "    l = 0\n",
+    "    r = len(arr) -1\n",
+    "    while l <= r:\n",
+    "        arr[l] , arr[r] = arr[r], arr[l]\n",
+    "        l+=1\n",
+    "        r-=1\n",
+    "    return arr\n",
+    "num = reverse([1,2,3,4,5,7,6])\n",
+    "print(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "6ffabc42-bbb6-4172-aba1-6928d8e8f7b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Palindrom the number\n",
+    "def Palin(s):\n",
+    "    l = 0\n",
+    "    r = len(s) -1\n",
+    "    while l <= r:\n",
+    "        if s[l] != s[r]:\n",
+    "            False\n",
+    "        l+=1\n",
+    "        r-=1\n",
+    "    return True\n",
+    "Palin(\"ada\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "e460abf9-41a7-421a-ae61-a185500bc854",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 53.Maximum Subarray\n",
+    "class Solution:\n",
+    "    def maxSubArray(self, nums:list[int]):\n",
+    "        cur_sum = nums[0]\n",
+    "        max_sum =nums[0]\n",
+    "        for i in range(1,len(nums)):\n",
+    "            cur_sum = max(nums[i], cur_sum + nums[i])\n",
+    "            max_sum = max(max_sum , cur_sum)\n",
+    "        return max_sum\n",
+    "\n",
+    "obj = Solution()\n",
+    "result = obj.maxSubArray([-2,1,-3,4,-1,2,1,-5,4])\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "527b6ebe-7f3d-4406-bcc1-e2ffd2ddca42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 53.Maximum Subarray\n",
+    "class Solution:\n",
+    "    def maxSubArray(self, nums:list[int]):\n",
+    "        cur_sum = 0\n",
+    "        max_sum = -10**7\n",
+    "        for i in range(1,len(nums)):\n",
+    "            cur_sum += nums[i]\n",
+    "            max_sum = max(max_sum , cur_sum)\n",
+    "            if cur_sum < 0:\n",
+    "                cur_sum = 0\n",
+    "        return max_sum\n",
+    "\n",
+    "obj = Solution()\n",
+    "result = obj.maxSubArray([-2,1,-3,4,-1,2,1,-5,4])\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "640daf2c-391e-4970-927b-b81bd4f14f9c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
