--- a/LeetCode1.ipynb
+++ b/LeetCode1.ipynb
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "id": "6ffabc42-bbb6-4172-aba1-6928d8e8f7b1",
    "metadata": {},
    "outputs": [
@@ -751,13 +751,13 @@
        "True"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Palindrom the number\n",
+    "# Palindrom string \n",
     "def Palin(s):\n",
     "    l = 0\n",
     "    r = len(s) -1\n",
@@ -767,7 +767,7 @@
     "        l+=1\n",
     "        r-=1\n",
     "    return True\n",
-    "Palin(\"ada\")"
+    "Palin(\"dad\")"
    ]
   },
   {
@@ -857,7 +857,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
