--- a/LeetCode1.ipynb
+++ b/LeetCode1.ipynb
@@ -834,11 +834,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "640daf2c-391e-4970-927b-b81bd4f14f9c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "[24, 12, 8, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#238. Product of Array Except Self\n",
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def productExceptSelf(self, nums: List[int]) -> List[int]:\n",
+    "        res  = [1] * len(nums)\n",
+    "        prefix = 1\n",
+    "        for i in range(len(nums)):\n",
+    "            res[i] = prefix\n",
+    "            prefix = prefix * nums[i]\n",
+    "        postfix = 1\n",
+    "        for i in range(len(nums)-1,-1,-1):\n",
+    "            print(i)\n",
+    "            res[i]= postfix * res[i]\n",
+    "            postfix = postfix *nums[i]\n",
+    "        return res\n",
+    "            \n",
+    "obj = Solution()\n",
+    "result = obj.productExceptSelf([1,2,3,4])\n",
+    "print(result)"
+   ]
   }
  ],
  "metadata": {
@@ -857,7 +889,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.14.0"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
