Added one question and assingment

--- a/LeetCode1.ipynb
+++ b/LeetCode1.ipynb
@@ -871,6 +871,82 @@
     "result = obj.productExceptSelf([1,2,3,4])\n",
     "print(result)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "eecd58a8-1eb1-4bac-b37b-c7eda6c198e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#20 Valid Parentheses\n",
+    "class Solution:\n",
+    "    def isValid(self, s: str) -> bool:\n",
+    "        stack = []\n",
+    "        pairs = {')': '(', '}': '{', ']': '['}\n",
+    "\n",
+    "        for ch in s:\n",
+    "            if ch in pairs:                 # closing bracket\n",
+    "                if not stack:\n",
+    "                    return False\n",
+    "                if stack.pop() != pairs[ch]:\n",
+    "                    return False\n",
+    "            else:                            # opening bracket\n",
+    "                stack.append(ch)\n",
+    "\n",
+    "        return not stack\n",
+    "    \n",
+    "obj = Solution()\n",
+    "result = obj.isValid(\"{[()]}\")\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c386c0a3-09f8-482a-80ba-48288ba5ef86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#20 Valid Parentheses\n",
+    "class Solution:\n",
+    "    def isValid(self, s: str) -> bool:\n",
+    "        stack = []\n",
+    "        pairs = {')':'(',\n",
+    "                 ']':'[',\n",
+    "                 '}':'{'}\n",
+    "        for char in s:\n",
+    "            if char in pairs:\n",
+    "                if not stack or stack[-1] != pairs[char]:\n",
+    "                    return False                    \n",
+    "                stack.pop()\n",
+    "            else:\n",
+    "                stack.append(char)\n",
+    "        \n",
+    "        if stack:\n",
+    "            return False\n",
+    "        return True\n",
+    "    \n",
+    "obj = Solution()\n",
+    "result = obj.isValid(\"{[()]}\")\n",
+    "print(result)"
+   ]
   }
  ],
  "metadata": {
