--- a/LeetCode1.ipynb
+++ b/LeetCode1.ipynb
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "eecd58a8-1eb1-4bac-b37b-c7eda6c198e6",
    "metadata": {},
    "outputs": [
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "c386c0a3-09f8-482a-80ba-48288ba5ef86",
    "metadata": {},
    "outputs": [
@@ -919,7 +919,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False\n"
      ]
     }
    ],
@@ -927,25 +927,271 @@
     "#20 Valid Parentheses\n",
     "class Solution:\n",
     "    def isValid(self, s: str) -> bool:\n",
-    "        stack = []\n",
-    "        pairs = {')':'(',\n",
-    "                 ']':'[',\n",
-    "                 '}':'{'}\n",
-    "        for char in s:\n",
-    "            if char in pairs:\n",
-    "                if not stack or stack[-1] != pairs[char]:\n",
-    "                    return False                    \n",
-    "                stack.pop()\n",
-    "            else:\n",
-    "                stack.append(char)\n",
-    "        \n",
-    "        if stack:\n",
-    "            return False\n",
-    "        return True\n",
+    "      \n",
     "    \n",
     "obj = Solution()\n",
-    "result = obj.isValid(\"{[()]}\")\n",
+    "result = obj.isValid(\"[]\")\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "ed89e55c-a09f-4172-b219-261cb2272296",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "[('', 3)]\n",
+      "[('', 3)]\n",
+      "[]\n",
+      "[]\n",
+      "[('aaa', 2)]\n",
+      "[('aaa', 2)]\n",
+      "[('aaa', 2)]\n",
+      "[]\n",
+      "aaabcbc\n"
+     ]
+    }
+   ],
+   "source": [
+    "#394 \n",
+    "class Solution:\n",
+    "    def decodeString(self, s: str) -> str:\n",
+    "        stack = []\n",
+    "        current_string =\"\"\n",
+    "        current_number = 0\n",
+    "        for ch in s:\n",
+    "            if ch.isdigit():\n",
+    "                current_number = current_number * 10 + int(ch)\n",
+    "            elif ch == '[':\n",
+    "                stack.append((current_string,current_number))\n",
+    "                current_string =\"\"\n",
+    "                current_number = 0\n",
+    "            elif ch == ']':\n",
+    "                prev_str , num = stack.pop()\n",
+    "                current_string = prev_str + current_string  * num\n",
+    "            else:\n",
+    "                current_string += ch\n",
+    "                \n",
+    "            print(stack)    \n",
+    "        return current_string\n",
+    "            \n",
+    "obj = Solution()\n",
+    "result = obj.decodeString(\"3[a]2[bc]\")\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2d19f236-ee9b-4028-a746-8476c71526b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3779. Minimum Number of Operations to Have Distinct Elements\n",
+    "from typing import List\n",
+    "import math\n",
+    "class Solution:\n",
+    "    def minOperations(self, nums: List[int]) -> int:\n",
+    "        seen = set()\n",
+    "\n",
+    "        cnt = 0\n",
+    "        for num in reversed(nums):\n",
+    "            if num not in seen:\n",
+    "                cnt += 1\n",
+    "                seen.add(num)\n",
+    "            else:\n",
+    "                print(\"Hello\")\n",
+    "                break\n",
+    "\n",
+    "        n = len(nums)\n",
+    "        need_remove = n - cnt\n",
+    "        return math.ceil(need_remove / 3)\n",
+    "obj = Solution()\n",
+    "result = obj.minOperations([3,8,3,6,8,5])\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0f802e8b-bced-4f18-ab42-9e6f88c7761b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3769.Sort Integers by Binary Reflection\n",
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def sortByReflection(self, nums: List[int]) -> List[int]:\n",
+    "        \n",
+    "        nums.sort(key=lambda x:(int(bin(x)[2:][:: -1],2),x))\n",
+    "        return nums\n",
+    "\n",
+    "        \n",
+    "obj = Solution()\n",
+    "result = obj.sortByReflection([4, 5, 4])\n",
+    "print(result)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b5e40e1d-5419-42c3-8042-63e86832ae06",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#3769. Sort Integers by Binary Reflection \n",
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def sortByReflection(self, nums: List[int]) -> List[int]:\n",
+    "        arr = [] # To store pair(reflection, Orignal Value)\n",
+    "        for num in nums:\n",
+    "            #conversion from decimal to bunary\n",
+    "            binary = bin(num)[2:]\n",
+    "            #Reversing the number\n",
+    "            rev_binary = binary[::-1]\n",
+    "            #converting the rev_binary back to decimal\n",
+    "            reflection = int(rev_binary,2)\n",
+    "            #stroing step\n",
+    "            arr.append((reflection,num))            \n",
+    "        arr.sort()\n",
+    "\n",
+    "        result = []\n",
+    "        for i in arr:\n",
+    "            result.append(i[1])\n",
+    "        return result\n",
+    "\n",
+    "        \n",
+    "obj = Solution()\n",
+    "result = obj.sortByReflection([4, 5, 4])\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "b353fb01-1bfa-441d-8a12-622ea5492bc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/foo\n"
+     ]
+    }
+   ],
+   "source": [
+    "#71.Simplify Path\n",
+    "class Solution:\n",
+    "    def simplifyPath(self, path: str) -> str:\n",
+    "        stack = []\n",
+    "        for part in path.split('/'):\n",
+    "            if part == \"\" or part == \".\":\n",
+    "                continue\n",
+    "            elif part ==\"..\":\n",
+    "                if stack:\n",
+    "                    print(stack)\n",
+    "                    stack.pop()\n",
+    "            else:\n",
+    "                stack.append(part)\n",
+    "        return \"/\" +\"/\".join(stack)\n",
+    "obj = Solution()\n",
+    "result = obj.simplifyPath(\"/home//foo/\")\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d76d7ffc-f969-4512-af88-f8ade559ecf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "10\n",
+      "-5\n",
+      "[5, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#735.Asteroid Collision\n",
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def asteroidCollision(self, asteroids: List[int]) -> List[int]:\n",
+    "        stack = []\n",
+    "\n",
+    "        for ast in asteroids:\n",
+    "            print(ast)\n",
+    "            while stack and ast < 0 and stack[-1] > 0:\n",
+    "                if stack[-1] < -ast:\n",
+    "                    stack.pop()\n",
+    "                    continue\n",
+    "                elif stack[-1] == -ast:\n",
+    "                    stack.pop()\n",
+    "                break\n",
+    "            else:\n",
+    "                stack.append(ast)\n",
+    "        return stack\n",
+    "            \n",
+    "        \n",
+    "obj = Solution()\n",
+    "result = obj.asteroidCollision([5,10,-5])\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "764f11e2-cb55-4f5e-8c0d-3b8b12136e48",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#739"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27d206c8-6590-43bb-8d98-7dc691ca4e36",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#844"
    ]
   }
  ],
