Added one more question

--- a/LeetCode1.ipynb
+++ b/LeetCode1.ipynb
@@ -1133,6 +1133,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "d22a1835-8c34-46c9-a0f9-392d9d9187dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['home']\n",
+      "['home', 'foo']\n",
+      "/home/foo\n"
+     ]
+    }
+   ],
+   "source": [
+    "#71.Simplify Path\n",
+    "class Solution:\n",
+    "    def simplifyPath(self, path: str) -> str:\n",
+    "        stack = []\n",
+    "        curr_str = \"\"\n",
+    "        for e in path + \"/\":\n",
+    "            if e == \"/\":\n",
+    "                if curr_str ==\"..\":\n",
+    "                    if stack:\n",
+    "                        stack.pop()\n",
+    "                elif curr_str != \"\" and curr_str !='.':\n",
+    "                    stack.append(curr_str)\n",
+    "                    print(stack)\n",
+    "                curr_str =\"\"\n",
+    "            else:\n",
+    "                curr_str += e\n",
+    "        return \"/\"+ \"/\".join(stack)\n",
+    "                \n",
+    "                \n",
+    "obj = Solution()\n",
+    "result = obj.simplifyPath(\"/home//foo/\")\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "d76d7ffc-f969-4512-af88-f8ade559ecf3",
    "metadata": {},
@@ -1176,6 +1217,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "a9b061a8-94c3-47a9-a176-46c79ccf69ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<string>, line 17)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m<string>:17\u001b[1;36m\u001b[0m\n\u001b[1;33m    if ast:\u001b[0m\n\u001b[1;37m           ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unindent does not match any outer indentation level\n"
+     ]
+    }
+   ],
+   "source": [
+    "#735.Asteroid Collision\n",
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def asteroidCollision(self, asteroids: List[int]) -> List[int]:\n",
+    "        stack = []\n",
+    "\n",
+    "        for ast in asteroids:\n",
+    "             while stack and ast < 0 and stack[-1] > 0:\n",
+    "                   diff  = a + stack[-1]\n",
+    "                    if diff < 0:\n",
+    "                        stack.pop()\n",
+    "                    elif diff > 0:\n",
+    "                        ast = 0\n",
+    "                    else:\n",
+    "                        ast =0\n",
+    "                        stack.pop()\n",
+    "              if ast:\n",
+    "                stack.append(ast)\n",
+    "        return stack\n",
+    "        \n",
+    "            \n",
+    "        \n",
+    "obj = Solution()\n",
+    "result = obj.asteroidCollision([5,10,-5])\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "764f11e2-cb55-4f5e-8c0d-3b8b12136e48",
    "metadata": {},
@@ -1186,12 +1270,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "27d206c8-6590-43bb-8d98-7dc691ca4e36",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "#844"
+    "#844\n",
+    "class Solution:\n",
+    "    def backspaceCompare(self, s: str, t: str) -> bool:\n",
+    "        stack1 = []\n",
+    "        stack2 = []\n",
+    "        for ch in s:\n",
+    "            if ch == \"#\":\n",
+    "                if stack1:\n",
+    "                    stack1.pop()\n",
+    "            else:\n",
+    "                stack1.append(ch)\n",
+    "        for ch in t:\n",
+    "            if ch ==\"#\":\n",
+    "                if stack2:\n",
+    "                    stack2.pop()\n",
+    "            else:\n",
+    "                stack2.append(ch)\n",
+    "        return stack1 == stack2\n",
+    "                    \n",
+    "obj = Solution()\n",
+    "result = obj.backspaceCompare(\"xywrrmp\",\"xywrrmu#p\")\n",
+    "print(result)"
    ]
   }
  ],
